Fix compiler warnings with Java 21